# services/api/src/app.module.ts
@@ -4,6 +4,7 @@ import { AuthModule } from './auth/auth.module.js';
 import { RealtimeModule } from './realtime/realtime.module.js';
 import { ShieldModule } from './shield/shield.module.js';
 import { SyncModule } from './sync/sync.module.js';
+import { WaitlistModule } from './waitlist/waitlist.module.js';
 import { Config } from './config.js';
 import { CoreModule } from './core.module.js';
 import { dataSourceOptions } from './db/data-source.js';
@@ -17,6 +18,7 @@ import { MetaController } from './meta.controller.js';
     SyncModule,
     ShieldModule,
     RealtimeModule,
+    WaitlistModule,
   ],
   controllers: [MetaController],
 })
